Add support for configuration-cache on cv and generateVersionFile tasks